instantiation of BPTree

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,6 +70,7 @@ jobs:
           clang -v
         fi
         which h5c++
+        pip install iow
         pip install -e .   
             
     - name: Tests
