--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
     needs: lint
     strategy:
       matrix:
+        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
         os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -36,7 +37,7 @@ jobs:
     - uses: conda-incubator/setup-miniconda@v2
       with:        
         auto-update-conda: true
-        python-version: 3.6 
+        python-version: ${{ matrix.python-version }}
     - name: Install 
       shell: bash -l {0}
       run: |
@@ -48,7 +49,7 @@ jobs:
           # the system tools are unusable, hide them
           sudo mv -f /Library/Developer/CommandLineTools /Library/Developer/CommandLineTools.org
         fi
-        conda create --yes -n unifrac -c conda-forge -c bioconda python=3.6
+        conda create --yes -n unifrac -c conda-forge -c bioconda python=${{ matrix.python-version }}
         conda activate unifrac
         conda config --add channels conda-forge
         conda config --add channels bioconda
