--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
     needs: lint
     strategy:
       matrix:
-        python-version: ['3.8'] #, '3.7', '3.8', '3.9', '3.10']
+        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
         os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -60,7 +60,7 @@ jobs:
           conda install --yes -c conda-forge -c bioconda clangxx_osx-64
         fi
         conda install --yes -c conda-forge -c bioconda unifrac-binaries
-        conda install --yes -c conda-forge -c bioconda cython "hdf5<1.12.1" "biom-format<=2.1.10" numpy h5py "scikit-bio>=0.5.1" nose
+        conda install --yes -c conda-forge -c bioconda cython "hdf5<1.12.1" biom-format numpy h5py "scikit-bio>=0.5.1" nose
         echo "$(uname -s)"
         if [[ "$(uname -s)" == "Linux" ]];
         then
