--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,8 +60,7 @@ jobs:
           conda install --yes -c conda-forge -c bioconda clangxx_osx-64
         fi
         conda install --yes -c conda-forge -c bioconda "unifrac-binaries>=1.2"
-        # TEMP HACK: Use older version of scipy to work around scikit-bio problem
-        conda install --yes -c conda-forge -c bioconda cython "scipy<1.9" "hdf5<1.12.1" biom-format numpy "h5py<3.0.0 | >3.3.0" "scikit-bio>=0.5.7" nose
+        conda install --yes -c conda-forge -c bioconda cython scipy hdf5 biom-format numpy "h5py>3.3.0" "scikit-bio>=0.5.8" nose
         echo "$(uname -s)"
         if [[ "$(uname -s)" == "Linux" ]];
         then
