--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: conda-incubator/setup-miniconda@v2
-      with:        
+      with:
+        miniconda-version: "latest"
         auto-update-conda: true
         python-version: ${{ matrix.python-version }}
     - name: Install 
