--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
     - name: flake8
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: 3.10
     - name: install dependencies
       run: python -m pip install --upgrade pip
     - name: lint
@@ -29,8 +29,17 @@ jobs:
     needs: lint
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10']
+        python-version: ['3.8', '3.9', '3.10' '3.11']]
         os: [ubuntu-latest, macos-latest, linux-gpu-cuda]
+        exclude:
+         - os: macos-latest
+           python-version: '3.9'
+         - os: macos-latest
+           python-version: '3.10'
+         - os: linux-gpu-cuda
+           python-version: '3.8'
+         - os: linux-gpu-cuda
+           python-version: '3.9'
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
