--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,13 +29,17 @@ jobs:
     needs: lint
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10' '3.11']]
+        python-version: ['3.8', '3.9', '3.10' '3.11']
         os: [ubuntu-latest, macos-latest, linux-gpu-cuda]
         exclude:
         - os: macos-latest
           python-version: '3.9'
+        - os: macos-latest
+          python-version: '3.10'
         - os: linux-gpu-cuda
           python-version: '3.8'
+        - os: linux-gpu-cuda
+          python-version: '3.9'
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
