pytest over nose

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
           conda install --yes -c conda-forge -c bioconda clangxx_osx-64
         fi
         conda install --yes -c conda-forge -c bioconda "unifrac-binaries>=1.2"
-        conda install --yes -c conda-forge -c bioconda cython biom-format numpy "h5py>3.3.0" "scikit-bio>=0.5.8" nose
+        conda install --yes -c conda-forge -c bioconda cython biom-format numpy "h5py>3.3.0" "scikit-bio>=0.5.8" pytest
         echo "$(uname -s)"
         if [[ "$(uname -s)" == "Linux" ]];
         then
@@ -87,7 +87,7 @@ jobs:
         # diagnostic messages for debugging, if needed
         export UNIFRAC_GPU_INFO=Y
         ls -lrt $CONDA_PREFIX/lib/libhdf5_cpp*
-        nosetests
+        pytest
         
     - name: Sanity checks
       shell: bash -l {0}
