--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,12 +30,8 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.9', '3.10', '3.11', '3.12']
-        os: [ubuntu-latest, linux-gpu-cuda]
+        os: [macos-13, macos-14, ubuntu-latest, linux-gpu-cuda]
         exclude:
-        - os: macos-latest
-          python-version: '3.9'
-        - os: macos-latest
-          python-version: '3.10'
         - os: linux-gpu-cuda
           python-version: '3.9'
         - os: linux-gpu-cuda
@@ -58,8 +54,15 @@ jobs:
         if [[ "$(uname -s)" == "Linux" ]];
         then
           conda install --yes -c conda-forge -c bioconda gxx_linux-64
-        else
+        elif [[ "$(uname -s)" == "Darwin" && "$(uname -m)" == "x86_64" ]];
+        then
           conda install --yes -c conda-forge -c bioconda clangxx_osx-64
+        elif [[ "$(uname -s)" == "Darwin" && "$(uname -m)" == "arm64" ]];
+        then
+          conda install --yes -c conda-forge -c bioconda clangxx_osx-arm64
+        else
+            echo $(uname -a)
+            exit 1
         fi
         conda install --yes -c conda-forge -c bioconda "unifrac-binaries>=1.2"
         conda install --yes -c conda-forge -c bioconda cython biom-format numpy "h5py>3.3.0" "scikit-bio>=0.5.8" pytest
