--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,15 +54,8 @@ jobs:
         if [[ "$(uname -s)" == "Linux" ]];
         then
           conda install --yes -c conda-forge -c bioconda gxx_linux-64
-        elif [[ "$(uname -s)" == "Darwin" && "$(uname -m)" == "x86_64" ]];
-        then
-          conda install --yes -c conda-forge -c bioconda clangxx_osx-64
-        elif [[ "$(uname -s)" == "Darwin" && "$(uname -m)" == "arm64" ]];
-        then
-          conda install --yes -c conda-forge -c bioconda clangxx_osx-arm64
         else
-            echo $(uname -a)
-            exit 1
+          conda install --yes -c conda-forge -c bioconda clangxx
         fi
         conda install --yes -c conda-forge -c bioconda "unifrac-binaries>=1.2"
         conda install --yes -c conda-forge -c bioconda cython biom-format numpy "h5py>3.3.0" "scikit-bio>=0.5.8" pytest
