--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,8 @@ jobs:
           export SDKROOT=$(xcrun --sdk macosx --show-sdk-path)
         elif [[ "$(uname -m)" == "arm64" ]];
         then
-          conda install --yes -c conda-forge -c bioconda clangxx_osx-arm64 clangdev
+        #conda install --yes -c conda-forge -c bioconda clangxx_osx-arm64 clangdev
+          conda install --yes -c conda-forge -c bioconda clangxx_osx-64 clangdev
           xcrun --sdk macosx --show-sdk-path
           export SDKROOT=$(xcrun --sdk macosx --show-sdk-path)
         else
