--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
     - name: flake8
       uses: actions/setup-python@v3
       with:
-        python-version: 3.9
+        python-version: '3.10'
     - name: install dependencies
       run: python -m pip install --upgrade pip
     - name: lint
@@ -29,17 +29,13 @@ jobs:
     needs: lint
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11']
-        os: [ubuntu-latest, macos-latest, linux-gpu-cuda]
+        python-version: ['3.9', '3.10', '3.11', '3.12']
+        os: [macos-13, macos-14, ubuntu-latest, linux-gpu-cuda]
         exclude:
-        - os: macos-latest
+        - os: linux-gpu-cuda
           python-version: '3.9'
-        - os: macos-latest
+        - os: linux-gpu-cuda
           python-version: '3.10'
-        - os: linux-gpu-cuda
-          python-version: '3.8'
-        - os: linux-gpu-cuda
-          python-version: '3.9'
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
@@ -58,11 +54,19 @@ jobs:
         if [[ "$(uname -s)" == "Linux" ]];
         then
           conda install --yes -c conda-forge -c bioconda gxx_linux-64
+        elif [[ "$(uname -s)" == "Darwin" ]];
+        then
+          # both arm64 and x86_64 need to be compiled with x86_64 it seems
+          # potentially due to rosetta?
+          conda install --yes -c conda-forge -c bioconda clangxx_osx-64 clangdev
+          xcrun --sdk macosx --show-sdk-path
+          export SDKROOT=$(xcrun --sdk macosx --show-sdk-path)
         else
-          conda install --yes -c conda-forge -c bioconda clangxx_osx-64
+          echo "$(uname -a)"
+          exit 1
         fi
         conda install --yes -c conda-forge -c bioconda "unifrac-binaries>=1.2"
-        conda install --yes -c conda-forge -c bioconda cython biom-format numpy "h5py>3.3.0" "scikit-bio>=0.5.8" nose
+        conda install --yes -c conda-forge -c bioconda cython biom-format numpy "h5py>3.3.0" "scikit-bio>=0.5.8" pytest
         echo "$(uname -s)"
         if [[ "$(uname -s)" == "Linux" ]];
         then
@@ -87,7 +91,7 @@ jobs:
         # diagnostic messages for debugging, if needed
         export UNIFRAC_GPU_INFO=Y
         ls -lrt $CONDA_PREFIX/lib/libhdf5_cpp*
-        nosetests
+        pytest
         
     - name: Sanity checks
       shell: bash -l {0}
