--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,8 +30,8 @@ jobs:
         run: |
           # set version from '${{ github.ref_name }}'
           export RELEASE_VERSION=${{ github.ref_name }}
-          pip install build numpy cython
-          python -m build -s
+          pip install numpy cython
+          python setup.py sdist
 
       - name: Publish a Python distribution to PyPI
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
